--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,12 @@
 <!--
-     <!DOCTYPE html>
-     <!--[if lt IE 7]>
-<html lang="en" ng-app="offsite" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>
-<html lang="en" ng-app="offsite" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>
-<html lang="en" ng-app="offsite" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
+    <!DOCTYPE html>
+    <!--[if lt IE 7]>
+        <html lang="en" ng-app="offsite" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+    <!--[if IE 7]>
+        <html lang="en" ng-app="offsite" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+    <!--[if IE 8]>
+        <html lang="en" ng-app="offsite" class="no-js lt-ie9"> <![endif]-->
+    <!--[if gt IE 8]><!-->
 <html lang="{{language}}" dir="{{language =='ar'? 'rtl' : 'ltr'}}" ng-app="offsite" class="no-js"> <!--<![endif]-->
 <head>
   <title data-ng-bind-html="pageTitle"></title>
@@ -58,12 +58,9 @@
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
-<script src="../bower_components/satellizer/satellizer.min.js"></script>
-<script src="../bower_components/angular-material-icons/angular-material-icons.min.js"></script>
-
 
 <script type="text/javascript" src="../bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
-<!--<script type="text/javascript" src="../bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>-->
+<script type="text/javascript" src="../bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
 
 <script type="text/javascript" src="../bower_components/angular-translate/angular-translate.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
