--- a/app/index.html
+++ b/app/index.html
@@ -39,10 +39,10 @@
 </md-content>
 <md-sidenav scroll class="md-sidenav-left md-whiteframe-z2" md-component-id="left" style="background-color: rgba(63, 81, 181, 0)">
   <md-content layout-padding style="background-color: rgb(239, 93, 48);">
-    <md-button ng-click="close()" class="md-primary" aria-label="back" style="color: white;">
-      <!--<md-icon md-svg-icon="../img/icons/back.svg"></md-icon>-->
+    <md-button ng-click="close()" class="md-icon-button" aria-label="back" style="color: white;">
+      <ng-md-icon icon="arrow_back" size="20" style="fill: white;"></ng-md-icon>
       <!--TODO-->
-      back
+      <!--back-->
     </md-button>
   </md-content>
 </md-sidenav>
@@ -58,10 +58,12 @@
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
+<script src="../bower_components/satellizer/satellizer.min.js"></script>
+<script src="../bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 
 
 <script type="text/javascript" src="../bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="../bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
+<!--<script type="text/javascript" src="../bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>-->
 
 <script type="text/javascript" src="../bower_components/angular-translate/angular-translate.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
