--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <md-icon md-svg-icon="assets/images/icons/menu.svg"></md-icon>
       </md-button>
       <h2>
-        <span>Welcome Anonymous</span>
+        <span>Welcome </span>
       </h2>
       <span flex></span>
       <md-button class="md-icon-button" aria-label="More">
@@ -58,6 +58,7 @@
 <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
+<script src="../bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 
 <script type="text/javascript" src="../bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="../bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
