--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="mobile-web-app-capable" content="yes">
   <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; img-src 'self' * data:; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-  <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css">
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
 
   <link rel="stylesheet" href="assets/stylesheets/app.css">
 </head>
@@ -24,23 +24,23 @@
   <div ui-view></div>
 </body>
 
-<script src="..bower_components/fastclick/lib/fastclick.js"></script>
+<script src="bower_components/fastclick/lib/fastclick.js"></script>
 
-<script src="../bower_components/angular/angular.js"></script>
-<script src="../bower_components/angular-aria/angular-aria.js"></script>
-<script src="../bower_components/angular-animate/angular-animate.js"></script>
-<script src="../bower_components/angular-ui-utils/ui-utils.min.js"></script>
-<script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script src="../bower_components/angular-touch/angular-touch.min.js"></script>
-<script src="../bower_components/angular-material/angular-material.js"></script>
-<script src="../bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-aria/angular-aria.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-ui-utils/ui-utils.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="bower_components/angular-touch/angular-touch.min.js"></script>
+<script src="bower_components/angular-material/angular-material.js"></script>
+<script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 
-<script type="text/javascript" src="../bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="../bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
 
-<script type="text/javascript" src="../bower_components/angular-translate/angular-translate.min.js"></script>
-<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
-<script type="text/javascript" src="../bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-resource/angular-resource.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
 
 <script src="app.js"></script>
