--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
-<script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+<!-- <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script> -->
 
 <script type="text/javascript" src="bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
