--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,10 @@
 <script src="bower_components/angular-material/angular-material.js"></script>
 <!-- <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script> -->
 
-<script type="text/javascript" src="bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script>
+<!-- <script type="text/javascript" src="bower_components/angular-cookie/angular-cookie.min.js" charset="utf-8"></script> -->
+<!-- <script type="text/javascript" src="bower_components/ng-token-auth/dist/ng-token-auth.min.js" charset="utf-8"></script> -->
 
-<script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
+<!-- <script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script> -->
 <script type="text/javascript" src="bower_components/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
@@ -48,7 +48,7 @@
 <script src="components/users/users.module.js"></script>
 <script src="components/users/login.js"></script>
 
-<script src="services/user.service.js"></script>
+<!-- <script src="services/user.service.js"></script> -->
 <script src="services/api.service.js"></script>
 
 </html>
