--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
 <!--<script type="text/javascript" src="bower_components/fastclick/lib/fastclick.js"></script> -->
 
-<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-ui-utils/ui-utils.min.js"></script>
